[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/enemies/bat.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/Bat.gd" type="Script" id=2]
[ext_resource path="res://assets/Scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/shaders/colour.shader" type="Shader" id=4]
[ext_resource path="res://assets/Scenes/Hitbox.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/colour = Color( 1, 1, 1, 1 )
shader_param/enabled = false

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Fly",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 96.0

[sub_resource type="CircleShape2D" id=7]
radius = 8.0

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 5.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )
hit_colour = Color( 0.705882, 0.321569, 0.321569, 0.862745 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0, 0.345098, 1, 1 )
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = SubResource( 5 )
animation = "Fly"
offset = Vector2( -0.5, 0 )
flip_v = true

[node name="Detection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
modulate = Color( 0.435294, 0.282353, 0.0627451, 1 )
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
modulate = Color( 0.290196, 1, 0, 1 )
LAYER = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 7 )

[node name="DeathAnim" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
MASK = 1
damage = 1

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0.960784, 0.172549, 0.172549, 1 )
shape = SubResource( 9 )

[connection signal="area_entered" from="Detection" to="." method="_on_player_detected"]
[connection signal="body_entered" from="Detection" to="." method="_on_player_detected"]
[connection signal="damage_taken" from="Hurtbox" to="." method="_on_damaged"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_invincibility_end"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_invincibility_start"]
[connection signal="hit_success" from="Hitbox" to="." method="_on_hit_success"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
